# Parallel-Image-Processor

./: README.md
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
